tests/bad/bad-neg-type.ris
void main():
    print -true;
    return;